kube/services/netpolicy/networkpolicy_google-sa-validation_templ.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-google-sa-validation
spec:
  podSelector:
    matchLabels:
      app: google-sa-validation
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: fence
      - podSelector:
          matchLabels:
             app: indexd
      - podSelector:
          matchLabels:
             app: peregrine
      - podSelector:
          matchLabels:
             app: sheepdog
      - podSelector:
          matchLabels:
             app: revproxy
      - podSelector:
          matchLabels:
             app: arborist
      ports:
         - port: 80
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: fence
      - podSelector:
          matchLabels:
            app: indexd
      - ipBlock:
           cidr: GEN3_FENCE_DBIP/32
      - ipBlock:
           cidr: GEN3_CLOUDPROXY_CIDR
      - ipBlock:
           cidr: 54.224.0.0/12
      - ipBlock:
           cidr: 52.92.16.0/20
      - ipBlock:
           cidr: 0.0.0.0/0
  policyTypes:
   - Ingress
   - Egress
